--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 ##Server and application details
-server.port=8092
+server.port=8080
 server.servlet.context-path=/banking
 
 ##Database connection details
 spring.datasource.url=jdbc:mysql://localhost:3306/bank
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=guest123
 
 spring.jpa.hibernate.ddl-auto=update
 
