--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,15 @@ spring.jpa.hibernate.ddl-auto=update
 
 ##sonar url
 sonar.host.url=http://localhost:9000
+
+##email properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=amoljadhav531@gmail.com
+spring.mail.password=hadapsar@123
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
